styles.css
body {
    font-family: "Jersey 10", sans-serif;
    background-color: #6134db;
    margin: 0;
    padding: 0;
}
div {
    background-color: #3c2b88;
    margin: 0;
    padding: 0;
}
a {
    color: #d11717;
    text-decoration: none;
}
h1 {
    color: #856eec;
    text-align: left;
    font-size: larger;
}
.top-bar {
    background-color: #3c2b88;
    text-align: center;
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
}
button {
    background-color: #856eec;
    color: #3c2b88;
    border: none;
    padding: 10px 20px;
    margin: 10px;
    cursor: pointer;
    top: 0;
    left: 0;
}
button:hover {
    background-color: #3788a8;
    color: #2e08d8;
}
.button-container {
    text-align: right;
}
.content {
    margin-top: 150px;
    padding: 20px;
    background-color: #6134db;
}
.footer {
    background-color: #3c2b88;
    text-align: center;
    position: fixed;
    bottom: 0;
    left: 0;
    right: 0;
}

